--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "broccoli-handlebars-precompiler",
   "description": "Precompiles handlebars templates",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "author": {
     "name": "Jakub Korupczynski",
     "email": "jakub.korupczynski@gmail.com"
@@ -21,7 +21,9 @@
     "url": "https://github.com/jakkor/broccoli-handlebars-precompiler/issues"
   },
   "dependencies": {
+    "broccoli-file-creator": "^1.0.1",
     "broccoli-filter": "^0.1.14",
+    "broccoli-merge-trees": "^1.1.0",
     "handlebars": "^4.0.2"
   }
 }
